fix bug with per page pref, optimize path view, reduce spacing in ev modal

--- a/src/Components/Modals/EvidenceModal.module.scss
+++ b/src/Components/Modals/EvidenceModal.module.scss
@@ -124,9 +124,6 @@
     font-size: 16px;
     color: $black;
     margin-bottom: 0;
-    &:last-of-type {
-      margin-bottom: $s;
-    }
   }
   .title {
     margin-bottom: 0;
@@ -139,7 +136,7 @@
   background-color: $palePurple;
   border-radius: $largeBorderRadius;
   border: 1px solid $lightPurpleTwo;
-  margin: $s auto $l;
+  margin: $s auto $s;
   width: 100%;
   overflow: hidden;
   display: flex;
