--- a/src/Components/PathView/PathView.module.scss
+++ b/src/Components/PathView/PathView.module.scss
@@ -158,10 +158,6 @@
       text-decoration: underline;
     }
   }
-  .showAll {
-    margin: 0 auto;
-    font-weight: 700;
-  }
   .buttons {
     display: flex;
     justify-content: center;
