--- a/src/Components/ResultsList/ResultsList.module.scss
+++ b/src/Components/ResultsList/ResultsList.module.scss
@@ -61,7 +61,7 @@
           cursor: default;
           position: relative;
         }
-        .fdaHead, .evidenceHead, .scoreHead, .pathsHead {
+        .fdaHead, .evidenceHead, .scoreHead, .pathsHead, .nameHead {
           svg {
             margin-left: 2px;
             width: 24px;
